about background image fix
image was too cropped at full size. text was in improper position at smaller dimensions.

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ header h2 {
 .about {
     background-image: url(./images/mike-erskine-S_VbdMTsdiA-unsplash.jpg);
     background-repeat: no-repeat;
+    background-position: center;
     background-size: 100%;
     height: 26rem;
 }
@@ -87,7 +88,7 @@ header h2 {
 .about h3{
     margin-top:10%;
     margin-left: 8%;
-    padding-top: 3rem;
+    padding-top: 6rem;
     padding-right: 7rem;
 }
 
